--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/patrickvilliger/logout#readme",
   "devDependencies": {
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "source-map-loader": "^0.2.4",
@@ -28,5 +30,8 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  }
 }
