--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "LogOut from your daily business and dive in to your outdoor activities.",
   "main": "/src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open",
-    "start": "webpack -p"
+    "build": "webpack --config webpack.config.prod.js",
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js --open"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,13 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "path": "^0.12.7",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
   },
