--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "/src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
-    "start:dev": "webpack-dev-server --config webpack.config.dev.js --open"
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js --open",
+    "test": "jest --watch",
+    "test:ci": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "path": "^0.12.7",
     "source-map-loader": "^0.2.4",
